# Synthetic-Teleology

./: CLAUDE.md  README.md  langgraph.json  pyproject.toml
docs/: changelog.md  decisions.md  known_issues.md
docs/wip/: normalize-production-examples.md  project-status.md
examples/: 01_basic_loop.py  01_langgraph_basic_loop.py  02_hierarchical_goals.py  02_llm_goal_directed_agent.py  03_multi_agent_negotiation.py  03_reflective_critic.py  04_human_in_the_loop.py  04_multi_agent_negotiation.py  05_benchmark_suite.py  05_hierarchical_goals.py  06_benchmark_measurement.py  06_llm_research_agent.py  07_distribution_shift.py  07_react_research_agent.py  08_constraint_aware_planning.py  08_constraint_integration.py
examples/conceptual/: 01_basic_loop.py  02_multi_agent.py  03_constraints.py  04_evaluation_strategies.py  05_goal_revision.py  06_planning_strategies.py  07_hierarchical_goals.py  08_environments.py  09_metrics_measurement.py  10_ethical_constraints.py  11_llm_quickstart.py  12_llm_tools.py  13_llm_multi_agent.py  14_llm_metrics.py
examples/production/competitive_research/: README.md  __init__.py  agent.py  main.py  models.py  strategies.py  tools.py
examples/production/data_pipeline_fixer/: README.md  __init__.py  agent.py  main.py  models.py  strategies.py  tools.py
examples/production/deployment_coordinator/: README.md  (+6 more)
src/synthetic_teleology/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_v150_phase1.py  test_v150_phase2.py  test_v150_phase3.py
tests/agents/: test_factory.py  test_teleological.py
tests/domain/: test_aggregates.py  test_constraint_result.py  test_entities.py  test_events.py  test_values.py
tests/environments/: test_numeric.py  test_shared.py  test_state_dict.py  test_wrappers.py
tests/graph/: __init__.py  conftest.py  test_action_feedback.py  test_bdi_bridge.py  test_bounded_state.py  test_builder.py  test_builder_llm.py  test_closure_strategies.py  test_edges.py  test_graph.py  test_integrations.py  test_intentional_bridge.py  test_llm_graph.py  test_multi_agent.py  test_nodes.py  test_prebuilt.py  test_prompt_contents.py  test_revision_e2e.py  test_state.py  test_streaming.py  test_working_memory.py
tests/helpers/: mock_llm.py
tests/infrastructure/: test_event_bus.py  test_llm_providers.py  test_registry.py
tests/measurement/: test_benchmarks.py  test_collector.py  test_metrics.py
tests/services/: test_audit_knowledge.py  test_constraints.py  test_evaluation.py  test_evolving_constraints.py  test_goal_revision.py  test_llm_constraints.py  test_llm_error_handling.py  test_llm_evaluation.py  test_llm_negotiation.py  test_llm_planning.py  test_llm_revision.py  test_loop.py  test_planning.py  test_self_modeling_evaluator.py
(+116 files in other folders)
