[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthetic-teleology"
version = "1.3.0"
description = "LLM-first LangGraph toolkit for goal-directed agents implementing Synthetic Teleology (Haidemariam, 2026)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "langgraph>=0.2", "langchain-core>=0.3", "pydantic>=2.0"]

[project.optional-dependencies]
llm-anthropic = ["anthropic>=0.40"]
llm-openai = ["openai>=1.50"]
llm-huggingface = ["transformers>=4.40", "torch>=2.0"]
llm-anthropic-lc = ["langchain-anthropic>=0.3"]
llm-openai-lc = ["langchain-openai>=0.3"]
llm-generic = ["httpx>=0.27"]
viz = ["matplotlib>=3.8", "rich>=13.0"]
all = [
    "synthetic-teleology[llm-anthropic,llm-openai,llm-huggingface,llm-anthropic-lc,llm-openai-lc,llm-generic,viz]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "langgraph-cli>=0.1",
]

[project.scripts]
synthetic-teleology = "synthetic_teleology.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetic_teleology"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
